[gd_scene load_steps=10 format=3 uid="uid://3j4nys6t5v5t"]

[ext_resource type="Script" path="res://Scripts/ModalJuicesLvl.gd" id="1_yqje8"]
[ext_resource type="FontFile" uid="uid://ms3aoe2yfr47" path="res://Assets/Temp/Dosis-VariableFont_wght.ttf" id="2_1vn2i"]
[ext_resource type="Texture2D" uid="uid://cdbf55j5esw47" path="res://Assets/Temp/Sin nombre.png" id="3_joy1t"]
[ext_resource type="Texture2D" uid="uid://bg5f77xqvjyrg" path="res://Assets/Temp/JuiceGlassGlow.png" id="4_ih3kd"]
[ext_resource type="Texture2D" uid="uid://cbjqwcqtmwjlt" path="res://Assets/Temp/arrowLeft.png" id="5_jil7b"]
[ext_resource type="Texture2D" uid="uid://boayohiw4kcev" path="res://Assets/Temp/arrowRight.png" id="6_vwt7t"]

[sub_resource type="FontVariation" id="FontVariation_dds5r"]
base_font = ExtResource("2_1vn2i")
variation_embolden = 1.0

[sub_resource type="Theme" id="Theme_8cke2"]
default_font = SubResource("FontVariation_dds5r")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5eqe"]
bg_color = Color(0.878431, 0.513726, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ModalJuicesLvl" type="Node2D"]
script = ExtResource("1_yqje8")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 28.0
offset_top = 27.0
offset_right = 28.0
offset_bottom = 27.0
theme = SubResource("Theme_8cke2")

[node name="Wood Background" type="TextureRect" parent="Panel"]
modulate = Color(0.67451, 0.607843, 0.521569, 1)
layout_mode = 0
offset_left = 32.0
offset_top = 35.0
offset_right = 408.0
offset_bottom = 567.0
texture = ExtResource("3_joy1t")
expand_mode = 1

[node name="JuiceName" type="Label" parent="Panel"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
offset_left = 40.0
offset_top = 80.0
offset_right = 390.0
offset_bottom = 155.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 2
offset_left = 55.0
offset_top = 151.0
offset_right = 376.0
offset_bottom = 331.0
texture = ExtResource("4_ih3kd")
expand_mode = 1
stretch_mode = 5

[node name="JuiceDescription" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 62.0
offset_top = 347.0
offset_right = 376.0
offset_bottom = 475.0
theme_override_font_sizes/font_size = 20
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 32.0
offset_top = 50.0
offset_right = 408.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Juice Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JuiceValue" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 31.0
offset_top = 487.0
offset_right = 409.0
offset_bottom = 564.0
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 366.0
offset_top = 72.0
offset_right = 397.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_l5eqe")
theme_override_styles/hover = SubResource("StyleBoxFlat_l5eqe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l5eqe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_l5eqe")
theme_override_styles/focus = SubResource("StyleBoxFlat_l5eqe")
text = "X"

[node name="Back" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 56.0
offset_top = 218.0
offset_right = 129.0
offset_bottom = 287.0
texture_normal = ExtResource("5_jil7b")
ignore_texture_size = true
stretch_mode = 5

[node name="Next" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 316.0
offset_top = 205.0
offset_right = 387.0
offset_bottom = 293.0
texture_normal = ExtResource("6_vwt7t")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/Next" to="." method="_on_next_pressed"]
